--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -24,8 +24,7 @@ Recent official releases are described here. Prereleases and older versions can 
 
 === 1.11.1.1208 (Dec 11, 2022) [[v1.11.1.1208]]
 
-* Always include -XX:-OmitStackTraceInFastThrow by default
-* Switch to using tools.deps
+* https://clojure.atlassian.net/browse/TDEPS-234[TDEPS-234] - Always include -XX:-OmitStackTraceInFastThrow by default
 * Use https://github.com/clojure/tools.deps/blob/master/CHANGELOG.md[tools.deps] 0.16.1264
 
 === 1.11.1.1200 (Nov 14, 2022) [[v1.11.1.1200]]
