--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -368,6 +368,16 @@ Note that external paths should be at or under the root directory of the project
  {org.clojure/clojure "/my/clojure/target"}}
 ----
 
+=== Classpath ordering
+
+Classpaths will be created in the following order, which is intended to be reproducible:
+
+* The `:extra-paths` in the order specified once classpath modifiers are merged and applied
+* The `:paths` in the order specified once classpath modifiers are merged and applied
+* All dependency and transitive dependency libs, sorted by:
+  * Depth from root
+  * Alphabetical by group/artifact
+
 = Clojure tools usage
 
 == deps.edn sources
