--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -322,6 +322,11 @@ For example, byte arrays (byte-array []) have a type of "[B".
 * bytes - A byte array
 * char - A primitive character
 * chars - A character array
+* objects - An object array
+
+For example, to mark a var with a particular type alias, one can do `^long
+age` or `^objects messages`. This would be equivalent of saying that `age` is
+of type `long` and `messages` is of type `Object[]`.
 
 [[primitives]]
 == Support for Java Primitives
