--- a/content/news/2022/12/22/deref.adoc
+++ b/content/news/2022/12/22/deref.adoc
@@ -62,7 +62,7 @@ New releases and tools this week:
 * https://github.com/factorhouse/slipway[slipway] 1.1.5 - A Clojure Companion to Jetty
 * https://github.com/practicalli/clojure-deps-edn[clojure-deps-edn]  - User level aliases and Clojure CLI configuration for deps.edn based projects
 * https://github.com/BetterThanTomorrow/joyride[joyride] 0.0.28 - Making VS Code Hackable like Emacs since 2022
-* https://githb.com/clojure/core.match[https://githb.com/clojure/core.match] 1.0.1 - An optimized pattern matching library for Clojure
+* https://github.com/clojure/core.match[https://githb.com/clojure/core.match] 1.0.1 - An optimized pattern matching library for Clojure
 * http://gethop.dev/[HOP] - an open source #devops tool for Clojure(Script) developers
 * https://github.com/lilactown/dom[dom]  - An extremely simple library for declaratively creating and updating web pages in ClojureScript.
 * https://github.com/lilactown/7-humble-guis[7-humble-guis]  - An implementation of 7 GUIs using HumbleUI
@@ -70,3 +70,4 @@ New releases and tools this week:
 * https://github.com/strojure/ring-undertow[ring-undertow]  - Clojure ring adapter to Undertow web server
 * https://github.com/strojure/zmap[zmap] 1.0.2 - Persistent map with lazily evaluated values for Clojure(Script)
 * https://github.com/opqdonut/hash-f[hash-f]  - Have you ever wanted to nest #() anonymous functions in Clojure?
+* https://github.com/babashka/nbb[nbb] 1.1.155 - Scripting in Clojure on Node.js using SCI
