--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -207,6 +207,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Heroku
 * Hexawise
 * #Homescreen
+* Hummi
 * Huobi Global
 * IB5k
 * ICM Consulting
