--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -66,6 +66,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Breeze EHR
 * BrickAlloy
 * Brightin
+* Brightmotive
 * BroadbandUK
 * BroadPeak
 * Buddy
