update links on tools release page

--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -13,7 +13,7 @@ The Clojure command line tools can be used to start a Clojure repl, use Clojure 
 
 For more information see the following docs:
 
-* <<xref/../../guides/getting_started#,Getting Started>> guide installation instructions
+* <<xref/../../guides/install_clojure#,Installation guide>>
 * <<xref/../../guides/deps_and_cli#,Deps and CLI guide>>
 * <<xref/../../reference/deps_and_cli#,Deps and CLI reference>>
 * https://github.com/clojure/homebrew-tools[Clojure Homebrew tap]
