--- a/content/news/2023/01/13/deref.adoc
+++ b/content/news/2023/01/13/deref.adoc
@@ -25,6 +25,7 @@ The https://2023.clojure-conj.org/call-for-proposals/[Sponsorship Prospectus] is
 * https://www.gethop.dev/post/the-wizard-of-hop-how-we-built-the-web-based-hop-cli-settings-editor-using-babashka-and-scittle[The wizard of HOP - How we built the web based HOP CLI Settings Editor using Babashka and Scittle] - Bingen Galartza
 * https://flexiana.com/2023/01/heres-why-startups-should-develop-in-clojure-in-2023[Here’s why startups should develop in Clojure in 2023] - Flexiana
 * https://andreyorst.gitlab.io/posts/2023-01-09-comparison-of-manifold-and-clojurecoreasync/[Comparison of manifold and clojure.core.async] - Andrey Listopadov
+* https://andreyorst.gitlab.io/posts/2023-01-10-compiling-clojure-projects-in-emacs/[Compiling Clojure projects in Emacs] - Andrey Listopadov
 
 == Libraries and tools
 
