Clarify how to pass --illegal-access flag
Per https://ask.clojure.org/index.php/11417/invoke-clojure-with-an-argument?show=12583#c12583

--- a/content/guides/faq.adoc
+++ b/content/guides/faq.adoc
@@ -362,6 +362,13 @@ If it is difficult to tell from the warning where the reflection is occurring, i
 --illegal-access=debug
 ----
 
+For example, via the Clojure CLI, using the `-J` option (or as part of `:jvm-opts` under an alias in `deps.edn`):
+
+[source]
+----
+clj -J--illegal-access=debug
+----
+
 == Design and Use
 
 [[encapsulation]]
