--- a/content/news/2023/02/03/deref.adoc
+++ b/content/news/2023/02/03/deref.adoc
@@ -51,7 +51,7 @@ New releases and tools this week:
 * https://github.com/BetterThanTomorrow/calva[calva] https://github.com/BetterThanTomorrow/calva/releases/tag/v2.0.329[2.0.329] - Clojure & ClojureScript Interactive Programming for VS Code
 * https://github.com/squint-cljs/squint[squint] 0.0.10 - ClojureScript syntax to JavaScript compiler
 * https://github.com/fulcrologic/fulcro-rad-semantic-ui[fulcro-rad-semantic-ui] 1.3.4 - Semantic UI Rendering Plugin for RAD
-* https://github.com/fulcrologic/fulcro-rad] 1.4.5 - Fulcro Rapid Application Development
+* https://github.com/fulcrologic/fulcro-rad[fulcro-rad] 1.4.5 - Fulcro Rapid Application Development
 * https://github.com/babashka/http-client[http-client] 0.0.3 - HTTP client for Clojure and babashka built on java.net.http
 * https://github.com/babashka/neil[neil] 0.1.52 - A CLI to add common aliases and features to deps.edn-based projects
 * https://cursive-ide.com/[Cursive] 1.12.8-eap1  - The Clojure(Script) IDE that understands your code
