Add Scrintal to companies.adoc

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -393,6 +393,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * SAP Concur
 * Sapiens Sapiens
 * Schibsted
+* Scrintal
 * SEB (Skandinaviska Enskilda Banken)
 * Shareablee
 * Sharetribe
