--- a/content/news/2023/02/10/deref.adoc
+++ b/content/news/2023/02/10/deref.adoc
@@ -11,6 +11,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 * https://www.youtube.com/watch?v=Mjn92fODdaA[Simpler User Interfaces with Membrane (by Adrian Smith)] - London Clojurians
 * https://www.youtube.com/watch?v=H9JNIb-_VZ0[RESTing with Emacs] - iLemming
+* https://www.youtube.com/watch?v=V3Bk4fyP4eY[271 - Relações & Validação no CLOJURE? 🤔 | theWiseDev Functional] - Otavio Lemos
 
 == Blogs
 
