--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -26,7 +26,7 @@ Recent official releases are described here. Prereleases and older versions can 
 
 * Fix issue with git tag verification for repos with a large number of tags
 * https://clojure.atlassian.net/browse/TDEPS-235[TDEPS-235] - Disallow http :mvn/repos
-* https://clojure.atlassian.net/browse/TDEPS-236[TDEPS-236] - TDEPS-236 Add rlwrap -m to clj for multiline editing
+* https://clojure.atlassian.net/browse/TDEPS-236[TDEPS-236] - Add rlwrap -m to clj for multiline editing
 
 === 1.11.1.1208 (Dec 11, 2022) [[v1.11.1.1208]]
 
