--- a/content/guides/editors.adoc
+++ b/content/guides/editors.adoc
@@ -51,7 +51,7 @@ The https://calva.io/[Calva] environment for interactive Clojure development use
 
 https://www.vim.org/[Vim] (or vi) is also an editor with a long history, known for its ability to edit text quickly and efficiently.  It has become the de-facto replacement for vi, the original Unix visual editor on which it was based.
 
-It's unique, powerful UI is popular enough that most other editors mentioned above include vi-modes that reproduce Vim's core UI functionality.
+Its unique, powerful UI is popular enough that most other editors mentioned above include vi-modes that reproduce Vim's core UI functionality.
 
 https://neovim.io/[Neovim] is a fork of Vim.  While it maintains a high degree of compatibility, there are some significant differences between the two editors.
 
