--- a/content/news/2023/02/26/deref.adoc
+++ b/content/news/2023/02/26/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-The https://2023.clojure-conj.org[Clojure/conj 2023 schedule] is now available! We can't wait to see you in person again in Durham, NC on Apr 27-28th. https://ti.to/cognitect/clojureconj-2023[Tickets for in-person and streaming] are now available.
+The https://2023.clojure-conj.org/schedule[Clojure/conj 2023 schedule] is now available! We can't wait to see you in person again in Durham, NC on Apr 27-28th. https://ti.to/cognitect/clojureconj-2023[Tickets for in-person and streaming] are now available.
 
 Additionally, we have opened the https://2023.clojure-conj.org/opportunity-grants/[Opportunity Grant] application form to provides tickets or travel to the Conj for members of underrepresented groups that would otherwise not be able to attend. Many thanks to those individuals that have provided funds so far.
 
