Add missing author for Enion Online

--- a/content/news/2023/02/26/deref.adoc
+++ b/content/news/2023/02/26/deref.adoc
@@ -26,7 +26,7 @@ Additionally, we have opened the https://2023.clojure-conj.org/opportunity-grant
 
 == Blogs, articles, and projects
 
-* http://alpha.enion.io/[Enion Online: A 3D multiplayer PvP battle game between orcs and humans, written in Clojure and ClojureScript] - 
+* http://alpha.enion.io/[Enion Online: A 3D multiplayer PvP battle game, written in Clojure and ClojureScript] - Ertuğrul Çetin
 * https://biffweb.com/p/js-from-clj/[Using Javascript libraries from Clojure] - Jacob O'Bryant
 * https://biffweb.com/p/secrets-auth-plugins/[Secrets, authentication, and plugins] - Jacob O'Bryant
 * https://blog.exupero.org/obb-script-to-copy-browser-url-and-paste-markdown-link/[Obb script to copy browser URL and paste Markdown link] - exupero
