--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -392,6 +392,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * SAP
 * SAP Concur
 * Sapiens Sapiens
+* Scarlet
 * Schibsted
 * Scrintal
 * SEB (Skandinaviska Enskilda Banken)
