--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://clojure-book.gitlab.io/images/clojure-book-cover-2001-space-odyssey-10.png[Clojure,link="https://clojure-book.gitlab.io/",width="130"]
+| https://clojure-book.gitlab.io/[Clojure] +
+by Karthikeyan A K +
+Mar 23, 2023
+
 | image::https://images-na.ssl-images-amazon.com/images/I/41VSbALzhmS._SL160.jpg[Web Development with Clojure,link="https://www.amazon.com/dp/168050682X",width="130"]
 | https://www.amazon.com/dp/168050682X[Web Development with Clojure, 3rd edition] +
 by Dmitri Sotnikov, Scot Brown +
