Update Aarhus Clojure Meetup link to new page

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -88,7 +88,7 @@ dojo); San Mateo (monthly meetup)
 *** https://plus.google.com/communities/110902954360410928675[Lambda Meetup Ostrava]
 *** https://www.meetup.com/Lambda-Meetup-Group/[Prague Lambda Meetup]
 ** Denmark
-*** https://www.meetup.com/aarhusclj/[Aarhus Clojure Meetup] (Twitter: https://twitter.com/aarhusclj[@aarhusclj])
+*** https://gath.io/group/itQUVzllL3FKEm_f6jQRd[Aarhus Clojure Meetup]
 *** https://www.meetup.com/Copenhagen-Clojure-Meetup/[Copenhagen Clojure Meetup] - meetings every 6 weeks
 ** Finland
 *** https://groups.google.com/forum/#%21forum/clojure-finland[Clojure Finland]
