--- a/content/news/2023/04/10/deref.adoc
+++ b/content/news/2023/04/10/deref.adoc
@@ -34,7 +34,7 @@ New releases and tools this week:
 * https://github.com/hyperfiddle/electric[electric] https://github.com/hyperfiddle/electric/blob/master/CHANGELOG.md[v2-263] - a signals DSL for fullstack web UI, with fine-grained reactive network
 * https://github.com/steffan-westcott/clj-otel[clj-otel] 0.2.0 - An idiomatic Clojure API for adding telemetry to your libraries and applications using OpenTelemetry
 * https://github.com/wardle/hermes[hermes] https://github.com/wardle/hermes/releases/tag/v1.2.1080[1.2.1080] - A library and microservice implementing the health and care terminology SNOMED CT
-* https://github.com/charmbracelet/gum[gum] 0.10.0 - A tool for glamorous shell scripts
+* https://github.com/lispyclouds/bblgum[bblgum] 0.10.0 - A tool for glamorous shell scripts
 * https://github.com/clj-commons/manifold[manifold] https://github.com/clj-commons/manifold/blob/0.4.0/CHANGES.md[0.4.0] - A compatibility layer for event-driven abstractions
 * https://github.com/cjohansen/portfolio[portfolio] 2023.04.05 - visual REPL for UI component development
 * https://github.com/matthewdowney/rendergpt[rendergpt]  - A Chrome extension to render HTML/JavaScript/CSS from ChatGPT into iframes.
