--- a/content/news/2023/04/13/clojure-1-12-alpha2.adoc
+++ b/content/news/2023/04/13/clojure-1-12-alpha2.adoc
@@ -3,7 +3,7 @@ Alex Miller
 2023-04-13
 :jbake-type: post
 
-Clojure 1.12.0-alpha2 is now available and we would encourage you to try it and give us your feedback!
+Clojure 1.12.0-alpha2 is now available and we encourage you to try it and give us your feedback!
 
 == Add libraries from the REPL
 
