--- a/content/news/2023/04/13/clojure-1-12-alpha2.adoc
+++ b/content/news/2023/04/13/clojure-1-12-alpha2.adoc
@@ -9,7 +9,7 @@ Clojure 1.12.0-alpha2 is now available and we encourage you to try it and give u
 
 Libraries are added to the classpath only at JVM startup time, so adding a library requires restarting the JVM, which loses the current state of the REPL. There are many use cases for adding a library interactively during development or to patch a live system - speculative evaluation of a library, adding a known dependency and continuing your work, or adding a library to accomplish a specific task.
 
-New in this release is a namespace https://clojure.github.io/clojure/branch-master/clojure.repl.deps-api.html[clojure.repl.deps] with several new functions for use at the REPL. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/sync-deps[sync-deps]. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-lib[add-lib] will take a lib that is not available on the classpath, and make it available by downloading (if necessary) and add to the classloader. Libs already on the classpath are not updated. If the coordinate is not provided, the newest Maven or git (if the library has an inferred git repo name) version or tag will be used. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-libs[add-libs] is like `add-lib`, but resolves a set of libraries and versions together. `sync-deps` will call `add-libs` with any libs present in deps.edn, but not yet present on the classpath. This functionality is intended only for interactive use at the repl - using a deps.edn etc are still the proper way to build and maintain your code. To this end, these functions all check that https://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/%2Arepl%2A[pass:[*repl*]] is set to true, and that flag is bound automatically by `clojure.main/repl`.
+New in this release is a namespace https://clojure.github.io/clojure/branch-master/clojure.repl.deps-api.html[clojure.repl.deps] with several new functions for use at the REPL. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-lib[add-lib] takes a lib that is not available on the classpath, and makes it available by downloading (if necessary) and adding to the classloader. Libs already on the classpath are not updated. If the coordinate is not provided, the newest Maven or git (if the library has an inferred git repo name) version or tag are used. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-libs[add-libs] is like `add-lib`, but resolves a set of libraries and versions together. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/sync-deps[sync-deps] calls `add-libs` with any libs present in deps.edn, but not yet present on the classpath. This functionality is intended only for interactive use at the repl - using a deps.edn etc are still the proper way to build and maintain your code. To this end, these functions all check that https://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/%2Arepl%2A[pass:[*repl*]] is set to true, and that flag is bound automatically by `clojure.main/repl`.
 
 In a clojure.main REPL, these new functions are automatically referred in the `user` namespace. In other repls, you may need to `(require '[clojure.repl.deps :refer :all])` before use.
 
@@ -17,11 +17,11 @@ This functionality is backed by tools.deps and the Clojure CLI (which must be in
 
 == Invoke external functions via the Clojure CLI
 
-The Clojure CLI provides infrastructure to <<xref/../../../../../reference/deps_and_cli#running-a-tool,invoke functions in a tool>>, which runs these functions using a classpath separate from the project classpath. Tools can be invoked with either a tool name or alias, the function, and args.
+The Clojure CLI provides infrastructure to <<xref/../../../../../reference/deps_and_cli#running-a-tool,invoke functions in a tool>>, which runs these functions using a classpath separate from the project classpath. Tools are invoked with either a tool name or alias, the function, and args.
 
 This release contains a new namespace https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html[clojure.tools.deps.interop] that encapsulates execution of an external tool function in https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html#clojure.tools.deps.interop/invoke-tool[invoke-tool], the same function used by `add-lib`.
 
-You can find more about the function execution protocol on the <<xref/../../../../../reference/deps_and_cli#function_protocol,deps reference>>.
+Find more about the function execution protocol on the <<xref/../../../../../reference/deps_and_cli#function_protocol,deps reference>>.
 
 
 == Start and control external processes
