fix link maybe?

--- a/content/news/2023/04/10/deref.adoc
+++ b/content/news/2023/04/10/deref.adoc
@@ -25,7 +25,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://blog.janetacarr.com/mindset-shifts-for-functional-programming-with-clojure/[Mindset shifts for Functional Programming (with Clojure)] - Janet A. Carr
 * https://dev.to/afucher/clojure-onde-aprender-28c5[Clojure: onde aprender?] - Arthur Fücher
 * https://roadtoreality.substack.com/p/back-from-the-code-mines[Back from the Code Mines] - Sam Ritchie
-* https://blog.agical.se/en/posts/extend-vs-code-in-user-space--without-invented-restrictions/[Extend VS Code in user space, without invented restrictions] - Peter Strömberg
+* ++https://blog.agical.se/en/posts/extend-vs-code-in-user-space--without-invented-restrictions/++[Extend VS Code in user space, without invented restrictions] - Peter Strömberg
 
 == Libraries and Tools
 
